@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.014
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Carp" => "0";
 requires "File::Path" => "0";
 requires "File::Temp" => "0";
