@@ -20,7 +20,7 @@ BEGIN {
 skipall_unless_can_db('PostgreSQL');
 
 subtest use_it => sub {
-    my $db = get_db db => {driver => 'PostgreSQL', load_sql => [quickdb => 't/schema/postgresql.sql']};
+    my $db = get_db db => {driver => 'PostgreSQL', load_sql => [quickdb => 't/schema/postgresql.sql'], verbose => 0};
     isa_ok($db, [$CLASS], "Got a database of the right type");
 
     is(get_db_or_skipall('db'), exact_ref($db), "Cached the instance by name");
@@ -37,6 +37,33 @@ subtest use_it => sub {
         $all,
         [{test_val => 'foo', test_id => 1}],
         "Got the inserted row"
+    );
+
+    $dbh->disconnect;
+    $db->stop;
+    my $clone = $db->clone;
+    my $dbh2 = $clone->connect;
+    my $sth2 = $dbh2->prepare('UPDATE quick_test SET test_val = ? WHERE test_id = ?');
+    $sth2->execute('bar', 1);
+
+    $sth2 = $dbh2->prepare('SELECT * FROM quick_test WHERE test_val = ?');
+    $sth2->execute('bar');
+    $all = $sth2->fetchall_arrayref({});
+    is(
+        $all,
+        [{test_val => 'bar', test_id => 1}],
+        "Cloned db was changed"
+    );
+
+    $db->start;
+    $dbh = $db->connect;
+    $sth = $dbh->prepare('SELECT * FROM quick_test WHERE test_id = ?');
+    $sth->execute(1);
+    $all = $sth->fetchall_arrayref({});
+    is(
+        $all,
+        [{test_val => 'foo', test_id => 1}],
+        "Original DB not changed"
     );
 };
 
